# libimobiledevice-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
libimobiledevice-src/: Cargo.toml
libimobiledevice-src/src/: lib.rs
libimobiledevice-sys/: Cargo.toml  build.rs  wrapper.h
libirecovery-src/: Cargo.toml
libirecovery-src/src/: lib.rs
libirecovery-sys/: Cargo.toml  build.rs  wrapper.h
libplist-src/: Cargo.toml
libplist-src/src/: lib.rs
libplist-src/tests/: build.rs
libusbmuxd-src/: Cargo.toml
libusbmuxd-src/src/: lib.rs
libusbmuxd-sys/: Cargo.toml  build.rs  wrapper.h
libusbmuxd-sys/src/: lib.rs
