[package]
name = "libimobiledevice-src"
description = "Source code and logic to build libimobiledevice from source"
version = "0.2.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
repository = "https://github.com/aspenluxxxy/libimobiledevice-rs"
readme = "../README.md"
license = "Zlib"
keywords = ["ffi", "ios", "apple"]
edition = "2018"

[dependencies]
cc = "1.0"
libusbmuxd-src = { path = "../libusbmuxd-src" }
