[package]
name = "libimobiledevice-sys"
description = "Bindings to libimobiledevice, a cross-platform software library that talks the protocols to interact with iOS devices."
version = "0.1.0"
authors = ["aspen <luxx4x@protonmail.com>"]
repository = "https://github.com/aspenluxxxy/libimobiledevice-rs"
readme = "../README.md"
license = "Zlib"
keywords = ["ios", "ffi", "usb", "apple"]
categories = ["external-ffi-bindings"]
links = "imobiledevice"
edition = "2018"

[build-dependencies]
bindgen = "0.55"
pkg-config = "0.3"