[package]
name = "libimobiledevice-sys"
description = "Bindings to libimobiledevice, a cross-platform software library that talks the protocols to interact with iOS devices."
version = "0.1.1"
authors = ["aspen <luxx4x@protonmail.com>"]
repository = "https://github.com/aspenluxxxy/libimobiledevice-rs"
documentation = "https://aspenuwu.me/docs/libimobiledevice-rs/libirecovery_sys"
readme = "../README.md"
license = "Zlib"
keywords = ["ios", "ffi", "usb", "apple"]
categories = ["external-ffi-bindings"]
links = "imobiledevice"
edition = "2018"

[build-dependencies]
bindgen = "0.56"
pkg-config = "0.3"