[package]
name = "libirecovery-sys"
description = "Bindings to libirecovery, a cross-platform library which implements communication to iBoot/iBSS found on Apple's iOS devices via USB."
version = "0.1.1"
authors = ["aspen <luxx4x@protonmail.com>"]
repository = "https://github.com/aspenluxxxy/libimobiledevice-rs"
documentation = "https://aspenuwu.me/docs/libimobiledevice-rs/libirecovery_sys"
readme = "../README.md"
license = "Zlib"
keywords = ["ios", "ffi", "usb", "apple", "iboot"]
categories = ["external-ffi-bindings"]
links = "irecovery"
edition = "2018"

[build-dependencies]
bindgen = "0.55"
pkg-config = "0.3"