[package]
name = "libirecovery-sys"
description = "Bindings to libirecovery, a cross-platform library which implements communication to iBoot/iBSS found on Apple's iOS devices via USB."
version = "0.2.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
repository = "https://github.com/aspenluxxxy/libimobiledevice-rs"
documentation = "https://aspenuwu.me/docs/libimobiledevice-rs/libirecovery_sys"
readme = "../README.md"
license = "Zlib"
keywords = ["ios", "ffi", "usb", "apple", "iboot"]
categories = ["external-ffi-bindings"]
links = "irecovery"
edition = "2018"

[dependencies]
libusb1-sys = { version = "0.5", features = ["vendored"], optional = true }

[build-dependencies]
bindgen = "0.57"
pkg-config = "0.3"
libirecovery-src = { path = "../libirecovery-src", optional = true }

[features]
vendored = ["libirecovery-src", "libusb1-sys"]
