[package]
name = "libusbmuxd-sys"
description = "Bindings to libusbmuxd, a client library for applications to handle usbmux protocol connections with iOS devices."
version = "0.2.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
repository = "https://github.com/aspenluxxxy/libimobiledevice-rs"
documentation = "https://aspenuwu.me/docs/libimobiledevice-rs/libusbmuxd_sys"
readme = "../README.md"
license = "Zlib"
keywords = ["ios", "ffi", "usb", "apple"]
categories = ["external-ffi-bindings"]
links = "usbmuxd"
edition = "2018"

[build-dependencies]
bindgen = "0.57"
pkg-config = "0.3"
libusbmuxd-src = { path = "../libusbmuxd-src", optional = true }

[features]
vendored = ["libusbmuxd-src"]
